# eagle-eye-de-library

./: .gitignore  README.md  pyproject.toml
docs/design/: RelatedWork.md
docs/nodes/load/: write_csv.md
docs/nodes/transform/: column_filter.md  drop_duplicates.md  generate_column.md  normalize_columns.md  replace_values.md  row_filter.md
docs/nodes/validate/: required_columns.md
docs/visualize/: tkinter_viewer.md  tkinter_visualizer.md
eagle_eye_de/: __init__.py
eagle_eye_de/core/: __init__.py  pipeline.py
eagle_eye_de/nodes/: __init__.py
eagle_eye_de/nodes/extract/: __init__.py  csv.py
eagle_eye_de/nodes/load/: __init__.py  write_csv.py
eagle_eye_de/nodes/transform/: __init__.py  column_filter.py  drop_duplicates.py  extract_table.py  filter.py  generate_column.py  normalize_columns.py  replace_values.py  row_filter.py  select_columns.py  type_consistency.py
eagle_eye_de/nodes/validate/: __init__.py  required_columns.py
eagle_eye_de/visualize/: __init__.py  tkinter_viewer.py
framework/: __init__.py  main.py  node.py  pipeline.py  reporting.py  runner.py
tests/: dev_test.py
tests/csvs/: shoppers_dirty.csv
