[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-eye-de"
version = "0.0.3"
description = "A lightweight data engineering framework (nodes/pipeline/runner/reporting)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Fraser Glasgow", email="U05FG22@abdn.ac.uk" }
]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["eagle_eye_de*"]