[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-eye-de"
version = "1.0.22"
description = "A lightweight data engineering framework (nodes/visualization)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Fraser Glasgow", email="U05FG22@abdn.ac.uk" }
]
license = "MIT"
keywords = ["data engineering", "etl", "pipeline", "csv", "data cleaning", "visualizer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/S0MBRX/eagle-eye-de-library"
Documentation = "https://github.com/S0MBRX/eagle-eye-de-library#eagleeyede"
"API Reference" = "https://github.com/S0MBRX/eagle-eye-de-library#api-overview"
Source = "https://github.com/S0MBRX/eagle-eye-de-library"
Issues = "https://github.com/S0MBRX/eagle-eye-de-library/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eagle_eye_de*"]
